[gd_scene load_steps=8 format=2]

[ext_resource path="res://1. GFX/GUI/TalkBoxBlack.png" type="Texture" id=1]
[ext_resource path="res://4. Scenes/Menus/pauseMenu.gd" type="Script" id=2]
[ext_resource path="res://4. Scenes/Menus/theme.tres" type="Theme" id=3]
[ext_resource path="res://1. GFX/Fonts/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://4. Scenes/Menus/settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utility/TrelloTool/Trello_Reporting_Tool.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="pauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 100.0
margin_right = -312.0
margin_bottom = -100.0
texture = ExtResource( 1 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
text = "We should put a pause menu here!"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/CenterContainer"]
margin_left = 79.0
margin_top = 90.0
margin_right = 321.0
margin_bottom = 310.0
custom_constants/separation = 20

[node name="ResumeButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_right = 242.0
margin_bottom = 30.0
text = "Resume"

[node name="FeedbackButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
visible = false
margin_top = 50.0
margin_right = 261.0
margin_bottom = 80.0
text = "Submit Feedback"

[node name="SettingsButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 242.0
margin_bottom = 80.0
text = "Settings"

[node name="MenuButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 242.0
margin_bottom = 130.0
text = "Return to menu"

[node name="ExitButton" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 242.0
margin_bottom = 180.0
text = "Exit"

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/CenterContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 242.0
margin_bottom = 220.0
texture = ExtResource( 1 )
region_rect = Rect2( 50, 50, 0, 200 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="ConfirmMenu" type="VBoxContainer" parent="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreYouSureLabel" type="Label" parent="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect/ConfirmMenu"]
margin_right = 323.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Are you sure?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect/ConfirmMenu"]
margin_top = 22.0
margin_right = 323.0
margin_bottom = 60.0
custom_constants/separation = 68
alignment = 1

[node name="SureYes" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect/ConfirmMenu/HBoxContainer"]
margin_left = 58.0
margin_right = 139.0
margin_bottom = 38.0
text = "Yes"
flat = true
align = 0

[node name="SureNo" type="Button" parent="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect/ConfirmMenu/HBoxContainer"]
margin_left = 207.0
margin_right = 265.0
margin_bottom = 38.0
text = "No"
flat = true
align = 2

[node name="settings" parent="." instance=ExtResource( 5 )]

[node name="Trello_Reporting_Tool" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/FeedbackButton" to="." method="_on_FeedbackButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect/ConfirmMenu/HBoxContainer/SureYes" to="." method="_on_SureYes_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/VBoxContainer/NinePatchRect/ConfirmMenu/HBoxContainer/SureNo" to="." method="_on_SureNo_pressed"]
